5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1646_651.log
== TEST (2019-04-15 22:10:05) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:13:37) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")

a = (72,7*h)-58
b = (62,1*h)-47,7

if s.upper() == M:
	print(round(a,2))
if s.upper() == F:
	print(round(b,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = (72,7*h)-58
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:14:07) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")

a = (72.7*h)-58
b = (62.1*h)-47.7

if s.upper() == M:
	print(round(a,2))
if s.upper() == F:
	print(round(b,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if s.upper() == M:
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:14:22) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")

a = (72.7*h)-58
b = (62.1*h)-47.7

if s.upper() == "M":
	print(round(a,2))
if s.upper() == "F":
	print(round(b,2))
-- OUTPUT:
14.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:14:28) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")

a = (72.7*h)-58
b = (62.1*h)-47.7

if s.upper() == "M":
	print(round(a,2))
if s.upper() == "F":
	print(round(b,2))
-- EXECUTION TIME:
0.137656
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:14:48) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")

a = (72.7*h)-58
b = (62.1*h)-47.7

if s.upper() == "M":
	print(round(a,2))
	
if s.upper() == "F":
	print(round(b,2))
-- OUTPUT:
14.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:15:03) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")

a = (72.7*h)-58
b = (62.1*h)-47.7

if s.upper() == "M":
	print(round(a,2))
	
else:
	print(round(b,2))
-- OUTPUT:
14.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:15:04) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")

a = (72.7*h)-58
b = (62.1*h)-47.7

if s.upper() == "M":
	print(round(a,2))
	
else:
	print(round(b,2))
-- EXECUTION TIME:
0.187231
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:15:15) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")

a = (72.7*h)-58
b = (62.1*h)-47.7

if s.upper() == "M":
	print(round(a,2))
if s.upper() == "F":
	print(round(b,2))
-- OUTPUT:
14.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:15:19) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")

a = (72.7*h)-58
b = (62.1*h)-47.7

if s.upper() == "M":
	print(round(a,2))
if s.upper() == "F":
	print(round(b,2))
-- OUTPUT:
14.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:16:05) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")

a = (72.7*h)-58
b = (62.1*h)-47.7

if s.upper() == "M":
	print(round(a,2))
if s.upper() == "F":
	print(round(b,2))
-- OUTPUT:
14.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:16:11) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")

a = (72.7*h)-58
b = (62.1*h)-47.7

if s.upper() == "M":
	print(round(a,2))
if s.upper() == "F":
	print(round(b,2))
-- EXECUTION TIME:
0.205541
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:16:11) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")

a = (72.7*h)-58
b = (62.1*h)-47.7

if s.upper() == "M":
	print(round(a,2))
if s.upper() == "F":
	print(round(b,2))
-- OUTPUT:
14.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:16:16) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")

a = (72.7*h)-58
b = (62.1*h)-47.7

if s == "M":
	print(round(a,2))
if s == "F":
	print(round(b,2))
-- OUTPUT:
14.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:16:24) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")

a = (72.7*h)-58
b = (62.1*h)-47.7

if s == "M":
	print(round(a,2))
if s == "F":
	print(round(b,2))
-- OUTPUT:
14.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:16:28) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")

a = (72.7*h)-58
b = (62.1*h)-47.7

if s == "M":
	print(round(a,2))
if s == "F":
	print(round(b,2))
-- EXECUTION TIME:
0.128941
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:16:30) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")

a = (72.7*h)-58
b = (62.1*h)-47.7

if s == "M":
	print(round(a,2))
if s == "F":
	print(round(b,2))
-- EXECUTION TIME:
0.136769
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:16:56) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")


if s.upper() == "M":
	a = (72.7*h)-58
	print(round(a,2))
if s.upper() == "F":
	b = (62.1*h)-47.7
	print(round(b,2))
-- EXECUTION TIME:
0.210204
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:16:57) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")


if s.upper() == "M":
	a = (72.7*h)-58
	print(round(a,2))
if s.upper() == "F":
	b = (62.1*h)-47.7
	print(round(b,2))
-- OUTPUT:
14.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:17:48) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")


if s.upper() == "M":
	a = (72.7*h)-58
	print(round(a,2))
if s.upper() == "F":
	b = (62.1*h)-47.7
	print(round(b,2))
-- EXECUTION TIME:
0.205878
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:21:35) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")


if s.upper() == "M":
	a = (72.7*h)-58
	print(round(a,2))
else?
	b = (62.1*h)-47.7
	print(round(b,2))
-- ERROR:
File "XXXX", line 8
    else?
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:22:02) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")


if s.upper() == "M":
	a = (72.7*h)-58
	print(round(a,2))
else:
	b = (62.1*h)-47.7
	print(round(b,2))
-- EXECUTION TIME:
0.188356
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:22:03) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")


if s.upper() == "M":
	a = (72.7*h)-58
	print(round(a,2))
else:
	b = (62.1*h)-47.7
	print(round(b,2))
-- EXECUTION TIME:
0.143609
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:22:06) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")


if s.upper() == "M":
	a = (72.7*h)-58
	print(round(a,2))
else:
	b = (62.1*h)-47.7
	print(round(b,2))
-- EXECUTION TIME:
0.211854
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:22:18) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")


if s.upper() == "M":
	a = (72.7*h)-58
	print(round(a,2))
if s.upper() == "F":
	b = (62.1*h)-47.7
	print(round(b,2))
-- EXECUTION TIME:
0.218128
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:22:19) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")


if s.upper() == "M":
	a = (72.7*h)-58
	print(round(a,2))
if s.upper() == "F":
	b = (62.1*h)-47.7
	print(round(b,2))
-- OUTPUT:
14.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:24:02) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")


{if s.upper() == "M":
	a = (72.7*h)-58
	print(round(a,2))
if s.upper() == "F":
	b = (62.1*h)-47.7
	print(round(b,2))}
-- EXECUTION TIME:
0.149291
-- ERROR:
  File "/home/codebench/codes/1646/651/main.py", line 5
    {if s.upper() == "M":
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:24:03) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")


{if s.upper() == "M":
	a = (72.7*h)-58
	print(round(a,2))
if s.upper() == "F":
	b = (62.1*h)-47.7
	print(round(b,2))}
-- ERROR:
File "XXXX", line 5
    {if s.upper() == "M":
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:24:18) 
-- CODE:
h = float(input("digite a altura: "))
s = input("digite o sexo: (M/F)  ")


if s.upper() == "M":
	a = (72.7*h)-58
	print(round(a,2))
if s.upper() == "F":
	b = (62.1*h)-44.7
	print(round(b,2))
-- EXECUTION TIME:
0.134693
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
